--- a/model_twitter.ipynb
+++ b/model_twitter.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "data = {}\n",
-    "data['fake'] = pd.read_csv('Datasets/fake_users.csv')\n",
-    "data['real'] = pd.read_csv(\"Datasets/real_users.csv\")\n"
+    "data['fake'] = pd.read_csv('Datasets/twitter_fake_users.csv')\n",
+    "data['real'] = pd.read_csv(\"Datasets/twitter_real_users.csv\")\n"
    ]
   },
   {
