--- a/model_twitter.ipynb
+++ b/model_twitter.ipynb
@@ -327,7 +327,7 @@
     "    nans = np.isnan(x)\n",
     "    x[nans] = 0\n",
     "    y = model.predict(x)\n",
-    "    print(\"Real\" if y[0] else \"Fake\")\n",
+    "    print(\"Real\" if y[0] == 1 else \"Fake\")\n",
     "\n",
     "except EOFError:\n",
     "    print(\"Error:\")"
