--- a/model_instagram.ipynb
+++ b/model_instagram.ipynb
@@ -202,7 +202,7 @@
     "    nans = np.isnan(x)\n",
     "    x[nans] = 0\n",
     "    y = model.predict(x)\n",
-    "    print(\"Real\" if y[0] else \"Fake\")\n",
+    "    print(\"Real\" if y[0] == 1 else \"Fake\")\n",
     "except:\n",
     "    print(\"Error\")"
    ]
